--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.header {
+    color: black;
+}
+
+/*.header a:link{
+    color: black
+}*/
+
 body {
   background-color: #a3d0b5;
   font-size: large;
@@ -5,13 +13,18 @@ body {
   margin-right: auto;
   margin-top: 40px;
   font-family: monospace;
-}
-
-a {
-  color: #00aa00;
+  max-width: 500px;
+  margin: auto;
 }
 
 img {
     height: 42px;
-    /*filter: opacity(0.5) drop-shadow(0 0 0 blue);*/
+}
+
+a {
+    color: #00aa00;
+}
+
+.footer {
+    font-size: small;
 }
