--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+/*
 .header {
     color: black;
 }
 
-/*.header a:link{
+.header a:link{
     color: black
-}*/
+}
+*/
 
 body {
   background-color: #a3d0b5;
@@ -14,7 +16,7 @@ body {
   margin-top: 40px;
   font-family: monospace;
   max-width: 500px;
-  margin: auto;
+  margin: auto
 }
 
 img {
@@ -26,5 +28,9 @@ a {
 }
 
 .footer {
+    position: absolute;
+    bottom: 40px;
     font-size: small;
+    text-align: center;
+
 }
