--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,28 @@
-.header p{
-    text-align: right;
+/*#ned.vc {
+    position: absolute;
+    left: 0;
+}*/
+
+nav {
+    text-align: center;
+    outline: 1px solid #a3d0b5;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
+    padding: 20px;
 }
 
 body {
-  background-color: #a3d0b5;
+  background-color: black;
   font-size: large;
   margin-left: auto;
   margin-right: auto;
@@ -14,14 +33,15 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  color: #a3d0b5;
 }
 
 img {
-    height: 42px;
+    height: 32px;
 }
 
 a {
-    color: #00aa00;
+    color: #a3d0b5;
 }
 
 code{
@@ -29,9 +49,9 @@ code{
     background: none;
     white-space: pre;
     padding: 0;
-    background-color: black;
+    outline: 1px solid white;
     color: white;
-    border-radius: 4px;
+    border-radius: 2px;
 }
 
 footer {
