CSS tweaks and other edits

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <p><!--{{ i18n "footer" }}-->This website is under active development. Thanks for your understanding!</p>
-    <p><a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Onion Mirror</a> <a href="pgp.txt">PGP</a> <a href="canary.txt">Canary</a></p>
+    This website is under active development. Thanks for your understanding!
+    <a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Onion Mirror</a> <a href="pgp.txt">PGP</a> <a href="canary.txt">Canary</a>
 </footer>
